[package]
name = "echo-rust"
version = "0.1.0"
authors = ["David Stainton <dstainton415@gmail.com>"]

[lib]
doctest = false
test = false

[dependencies]
grpc            = "~0.5"
protobuf        = "2"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
httpbis         = "~0.7"
env_logger      = "0.4.*"
tls-api            = "0.1.*"
tls-api-native-tls = "0.1.*"
tls-api-stub = "0.1.*"
rand = "0.5.4"

[build-dependencies]
protoc-rust-grpc = { path = "/home/user/code/grpc-rust/protoc-rust-grpc" }

[[bin]]
name = "echo_server"
test = false