[package]
name = "echo-rust"
version = "0.1.0"
authors = ["David Stainton <dstainton415@gmail.com>"]

[dependencies]
rand = "0.5.4"
log = "0.4.3"
log4rs = "0.8.0"
clap = "2.32.0"
hyperlocal = "0.6.0"
hyper = "0.12.25"
futures = "0.1.25"
serde = "1.0.89"
serde_cbor = "0.9.0"
serde_derive = "1.0.89"
serde_bytes = "0.10.5"

[[bin]]
name = "echo_server"
test = false
